crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@11.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT E'''1 \\\\''2'' '' 3'' 4 '::tsvector;"
---
SelectStmt@0..42
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..41
    TypeCast@7..41
      AConst@7..31
        Sconst@7..31 "E'''1 \\\\''2'' '' 3'' 4 '"
      Typecast@31..33 "::"
      TypeName@33..41
        Ident@33..41 "tsvector"
  Ascii59@41..42 ";"

